removed weight class until I can get it working

--- a/templates/competitions/competition_form.html
+++ b/templates/competitions/competition_form.html
@@ -73,9 +73,9 @@
 
             <!-- DIVISIONS & SHIRTS -->
             <fieldset class="mb-4">
-              <legend>Divisions & Shirts</legend>
+              <legend>Shirts</legend>
               <div class="row g-3">
-                <div class="col-md-12">{{ form.allowed_divisions|as_crispy_field }}</div>
+
                 <div class="col-md-12">{{ form.provides_shirts|as_crispy_field }}</div>
                 <div class="col-md-12" id="tshirt-sizes-container" style="display: none;">
                   <label><strong>Allowed T-shirt Sizes</strong></label>
