--- a/templates/competitions/manage_competition.html
+++ b/templates/competitions/manage_competition.html
@@ -128,7 +128,7 @@
             <div class="card-body">
                 <div class="text-center mb-4">
     <h2 class="text-primary mb-3">
-        <i class="bi bi-speedometer2 me-2"></i> Dashboard for {{ competition.name }}
+        <i class="bi bi-speedometer2 me-2"></i> Dashboard for {{ competition.name|title }}
     </h2>
 
     <div class="d-flex justify-content-center gap-3 flex-wrap">
@@ -228,11 +228,11 @@
                             {% for athlete in athletes %}
                                 <tr>
                                     <td><a href="{% url 'competitions:athletecompetition_update' athlete.pk %}"                                         >
-                                           {{ athlete.athlete.user.get_full_name }}
+                                           {{ athlete.athlete.user.get_full_name|title }}
                                         </a>
                                     </td>
                                     <td>{{ athlete.athlete.gender|capfirst }}</td>
-                                    <td>{{ athlete.division.name|capfirst }}</td>
+                                    <td>{{ athlete.division.name|title }}</td>
                                     <td>
                                         {% if athlete.weight_class.weight_d == "u" %}
                                             {{ athlete.weight_class.weight_d }}{{ athlete.weight_class.name|floatformat:"-1" }}
@@ -430,7 +430,7 @@
                                             {% for event in events %}
                                                 <li class="list-group-item d-flex justify-content-between align-items-center">
                                 <span>
-                                    <strong>{{ event.name }}</strong> <br>
+                                    <strong>{{ event.name|title }}</strong> <br>
 
                                 </span>
                                                    <div class="btn-group">
@@ -491,9 +491,9 @@
                                         <ul class="list-group">
                                             {% for sponsor in competition.sponsor_logos.all %}
                                                 <li class="list-group-item d-flex justify-content-between align-items-center">
-                                                    <img src="{{ sponsor.logo.url }}" alt="{{ sponsor.name }}"
+                                                    <img src="{{ sponsor.logo.url }}" alt="{{ sponsor.name|title }}"
                                                          style="max-height: 40px;" class="me-2">
-                                                    <span>{{ sponsor.name }}</span>
+                                                    <span>{{ sponsor.name|title }}</span>
                                                 </li>
                                             {% endfor %}
                                         </ul>
@@ -613,7 +613,7 @@
                             <h4 class="mb-0"><i class="bi bi-envelope-fill me-2"></i> Communications</h4>
                         </div>
                         <div class="card-body">
-                            <p class="text-center"><b>Email all registered athletes for {{ competition.name }}</b></p>
+                            <p class="text-center"><b>Email all registered athletes for {{ competition.name|title }}</b></p>
                             <form method="post" action="{% url 'competitions:send_email' competition.pk %}">
                                 {% csrf_token %}
                                 <div class="mb-3">
